secondfile/objects/CRDD_Parameters__c.object
<CustomObject>
    <fields>
        <fullName>Access_Provider__c</fullName>
        <label>ACCESS PROVIDER</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Back_End_Private_Line_Min__c</fullName>
        <label>BEPLMIN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Back_End_Switched_Eth_Min__c</fullName>
        <label>BEETHMIN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Front_End_Private_Line_Max__c</fullName>
        <label>SPPLMAX</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Front_End_Private_Line_Min__c</fullName>
        <label>SPPLMIN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Front_End_Switched_Eth_Max__c</fullName>
        <label>SPETHMAX</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Front_End_Switched_Eth_Min__c</fullName>
        <label>SPETHMIN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>REGION</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CRDD Parameters</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Access_Provider__c</columns>
        <columns>Region__c</columns>
        <columns>Front_End_Switched_Eth_Min__c</columns>
        <columns>Front_End_Switched_Eth_Max__c</columns>
        <columns>Front_End_Private_Line_Min__c</columns>
        <columns>Front_End_Private_Line_Max__c</columns>
        <columns>Back_End_Switched_Eth_Min__c</columns>
        <columns>Back_End_Private_Line_Min__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CRDD-{0000}</displayFormat>
        <label>CRDD Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CRDD Parameters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>